--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Chapters</button>
     <div class="dropdown-content" id="myDropdown">
-	<a href="chapter1.html">Chapter 1</a>
+	<a href="bapter1.html">Chapter 1</a>
     	<a href="chapter2.html">Chapter 2</a>
 	<a href="chapter3.html">Chapter 3</a>
 	<a href="chapter4.html">Chapter 4</a>
